# rag_fastapi

./: .env  .gitignore  pyproject.toml  test.db
src/rag/: main.py
src/rag/common/: deps.py
src/rag/core/: config.py  db.py
src/rag/items/: models.py  router.py  schemas.py  service.py
src/rag/retrieval/: models.py  router.py  schemas.py  service.py
